[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -18,26 +18,33 @@ DEADLINE: <2022-04-12 周二 23:00 +1m> SCHEDULED: <2022-04-12 周二 09:00 +1m>
 :LOGGING: DONE(@)
 :END:
 - State "DONE"       from "TODO"       [2022-03-13 周日 08:57] \\
-| date         | purpose     |   value |
-|--------------+-------------+---------|
-| [2022-03-12] | house rent  |   -2000 |
-| [2022-03-12] | takeout     |     -65 |
-| [2022-03-13] | takeout     |     -60 |
-| [2022-03-13] | shopping    |      28 |
-| [2022-03-14] | energy bill |    -100 |
-| [2022-03-15] | shopping    |     -20 |
-| [2022-03-18] | shopping    |     -18 |
-| [2022-03-20] | takeout     |     -50 |
-| [2022-03-21] | shopping    |    -2.5 |
-| [2022-03-22] | shopping    |    -2.5 |
-| [2022-03-23] | shopping    |    -2.5 |
-| [2022-03-24] | shopping    |    -1.3 |
-| [2022-03-25] | shopping    |    -1.3 |
-| [2022-03-25] | tunic       |     -90 |
-| [2022-03-25] | cup         |    -569 |
-| [2022-03-26] | takeout     |   -24.5 |
-| [2022-03-27] | takeout     |    -100 |
-|              |             | -3078.6 |
+| date         | purpose      |   value |
+|--------------+--------------+---------|
+| [2022-03-12] | house rent   |   -2000 |
+| [2022-03-12] | takeout      |     -65 |
+| [2022-03-13] | takeout      |     -60 |
+| [2022-03-13] | shopping     |      28 |
+| [2022-03-14] | energy bill  |    -100 |
+| [2022-03-15] | shopping     |     -20 |
+| [2022-03-18] | shopping     |     -18 |
+| [2022-03-20] | takeout      |     -50 |
+| [2022-03-21] | shopping     |    -2.5 |
+| [2022-03-22] | shopping     |    -2.5 |
+| [2022-03-23] | shopping     |    -2.5 |
+| [2022-03-24] | shopping     |    -1.3 |
+| [2022-03-25] | shopping     |    -1.3 |
+| [2022-03-25] | tunic        |     -90 |
+| [2022-03-25] | cup          |    -569 |
+| [2022-03-26] | takeout      |   -24.5 |
+| [2022-03-27] | takeout      |    -100 |
+| [2022-03-28] | shopping     |    -1.3 |
+| [2022-03-29] | shopping     |    -1.3 |
+| [2022-03-30] | shopping     |    -2.5 |
+| [2022-03-31] | shopping     |    -200 |
+| [2022-04-01] | phone fee    |     -50 |
+| [2022-04-01] | property fee |    -118 |
+| [2022-04-01] | shopping     |      -5 |
+|              |              | -3456.7 |
 #+TBLFM: @>$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
 house rent: 2000, game: 445,  takeout: 284, fee: 218, shopping: 1373, commute: 37
@@ -52,12 +59,20 @@ house rent: 2000, game: 445,  takeout: 284, fee: 218, shopping: 1373, commute: 3
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-04-04 周一 23:00 ++1w> SCHEDULED: <2022-04-01 周五 18:00 ++1w>
+DEADLINE: <2022-04-11 周一 23:00 ++1w> SCHEDULED: <2022-04-08 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-03-26 周六 16:15]
+:LAST_REPEAT: [2022-04-01 周五 17:10]
 :END:
+- State "DONE"       from "TODO"       [2022-04-01 周五 17:10] \\
+  1. UI编辑器生成控件类大部分替换为项目控件类
+  2. 为所有带有点击操作的控件添加方便的设置回调接口
+  3. 代码化过程中, 会将所有容器控件的子节点作为元素添加到容器中
+  4. 修复触摸AABB判定错误的问题
+  5. 修复英雄山小队面板打开错误的问题
+  ------------------------------------------------
+  1. 准备学学美术, 找不到老师, 学吉他, 也不知道如何下手, 难呀
 - State "DONE"       from "TODO"       [2022-03-26 周六 16:15] \\
   1. 完成状态栏扩展
      - 新增战斗时属性刷新组件
@@ -65,7 +80,7 @@ DEADLINE: <2022-04-04 周一 23:00 ++1w> SCHEDULED: <2022-04-01 周五 18:00 ++1
      - 新增战斗时状态记录组件
      - 新增战斗时生命状态记录组件
   2. 完善编辑器扩展文档
-  ------------------------------
+  ------------------------------------------------
   1. 艾尔登法狐有点难啊, 不过解密手册做的真的是很别致
 - State "DONE"       from "TODO"       [2022-03-19 周六 16:15] \\
   1. 实现了一个自动设置大小自动调整缩放的编辑器组件
@@ -654,12 +669,31 @@ DEADLINE: <2022-04-04 周一 23:00 ++1w> SCHEDULED: <2022-04-01 周五 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月报告及归档                                         :event:
-DEADLINE: <2022-04-02 周六 23:00 ++1m> SCHEDULED: <2022-04-02 周六 09:00 ++1m>
+DEADLINE: <2022-04-30 周六 23:00 ++1m> SCHEDULED: <2022-04-30 周六 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-02-28 周一 13:22]
+:LAST_REPEAT: [2022-04-01 周五 17:26]
 :END:
+- State "DONE"       from "TODO"       [2022-04-01 周五 17:26] \\
+  工作上:
+  1. 编写季度报告
+  2. 编写UI编辑器计划
+  3. 战斗优化:
+     - 第一回合前所有角色同时施法
+     - 无敌盾物伤魔伤统一为伤害免疫
+  4. 实现战斗中状态信息面板:
+     - 实时显示状态, 属性, 法宝状态, 技能cd
+  5. 完成UI编辑器自定义控件和组件研究
+     - 新增新控件拖拽容器
+     - 新增组件自动缩放
+  6. 全部公共UI控件替换为项目控件
+  7. 可点击对象接口优化
+  8. 代码化过程中自动将容器子节点设置为元素
+  生活上:
+  1. 住房合同续租一年
+  2. 法环法狐双开花
+  3. 代码之外读完了
 - State "DONE"       from "TODO"       [2022-02-28 周一 13:22] \\
   工作上:
   1. 学习了spine的基础概念
@@ -804,16 +838,19 @@ CLOCK: [2022-02-28 周一 13:20]--[2022-02-28 周一 13:45] =>  0:25
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
 ** TODO [#A] 每周学习晨星网投资教程一篇 [1/1]                       :event:
-DEADLINE: <2022-04-03 周日 23:59 +1w> SCHEDULED: <2022-03-28 周一 09:00 +1w>
+DEADLINE: <2022-04-17 周日 23:59 +1w> SCHEDULED: <2022-04-11 周一 09:00 +1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-03-21 周一 10:50]
+:LAST_REPEAT: [2022-04-02 周六 20:49]
 :END:
+- State "DONE"       from "TODO"       [2022-04-02 周六 20:49]
+- State "DONE"       from "TODO"       [2022-03-28 周一 11:40]
 - State "DONE"       from "TODO"       [2022-03-21 周一 10:50]
 - State "DONE"       from "TODO"       [2022-03-14 周一 10:39]
 - State "DONE"       from "TODO"       [2022-03-07 周一 15:39]
 :LOGBOOK:
+CLOCK: [2022-03-28 周一 11:15]--[2022-03-28 周一 11:40] =>  0:25
 CLOCK: [2022-03-07 周一 15:27]--[2022-03-07 周一 15:39] =>  0:12
 CLOCK: [2022-03-07 周一 14:57]--[2022-03-07 周一 15:22] =>  0:25
 CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
@@ -835,10 +872,13 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
 ** TODO [#A] 减肥 [3/3]                                             :event:
-SCHEDULED: <2022-03-21 周一 17:27 +1w>
+SCHEDULED: <2022-04-04 周一 17:27 +1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-03-21 周一 00:36]
+:LAST_REPEAT: [2022-04-01 周五 21:03]
 :END:
+- State "DONE"       from "TODO"       [2022-04-01 周五 21:03]
+- State "DONE"       from "TODO"       [2022-03-28 周一 09:28] \\
+  5.0->5.0->5.0, 74.0kg
 - State "DONE"       from "TODO"       [2022-03-21 周一 00:36] \\
   4.5->5.0->2.5, 74.6kg
 - State "DONE"       from "TODO"       [2022-03-13 周日 23:23] \\
@@ -849,8 +889,6 @@ SCHEDULED: <2022-03-21 周一 17:27 +1w>
 - [X] 跑步一次 5.0km
 - [X] 跑步一次 5.0km
 - [X] 跑步一次 5.0km
-** DONE [#A] 续租合同                                               :event:
-CLOSED: [2022-03-21 周一 00:36] DEADLINE: <2022-03-20 周日 18:00> SCHEDULED: <2022-03-20 周日 09:00>
 * Appointment
 * Project
 * Someday
