--- a/src/org/ref/tech/重构.org
+++ b/src/org/ref/tech/重构.org
@@ -1,2 +1,26 @@
 #+STARTUP: INDENT NUM
 #+PROPERTY: header-args:python :preamble "# -*- coding: utf-8 -*-" :exports both :results output
+
+* 重构原则
+** 何谓重构
+定义: 对软件内部结构的调整, 目的是在不改变软件可观测行为的前提下, 提高其理解性,
+降低其修改成本.
+*** 两个帽子
+使用重构技术开发软件时, 你把你的时间分配给两种截然不同的行为, 添加新功能, 以及
+重构. 添加新功能时, 不修改现有代码, 只增加新功能, 通过测试. 重构时只改进结构
+而不添加新功能.
+** 何为重构
+*** 重构改进软件设计
+没有重构程序的设计将会慢慢腐败, 重构像是在整理代码, 让一切回到正确的位置上. 通过
+重构你可以消除重复动作, 而这一点正是优秀设计的根本.
+*** 重构使软件更容易理解
+程序设计就是与计算机交谈, 编写代码本质上就是填补"你想要它做什么"和"告诉它怎么做"
+之间的缝隙. 但是你的代码无论如何, 只要准确计算机都是能够理解的, 但是你的代码是要
+被其他人理解的, 修改的. 通过重构之后, 你能让代码更容易让他人理解, 这能极大地提高
+生产效率. 更关键的是, 很多时候这个他人就是你自己.
+*** 重构帮助寻找bug
+通过重构你将对代码有着更深刻的理解, 搞清楚结构的同时自然也能发现不合理结构导致的
+bug
+*** 重构提高编程速度
+注意, 良好的设计才是快速开发的根本, 重构能够改进, 维护良好设计, 自然可以提高编程
+速度
