[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -24,7 +24,9 @@ DEADLINE: <2022-05-12 周四 23:00 +1m> SCHEDULED: <2022-05-12 周四 09:00 +1m>
 | date         | purpose    | value |
 |--------------+------------+-------|
 | [2022-04-12] | house rent | -2000 |
-|              |            | -2000 |
+| [2022-04-13] | buy guitar | -2500 |
+| [2022-04-14] | shopping   |   -10 |
+|              |            | -4510 |
 #+TBLFM: @>$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
 house rent: 2000, game: 445, takeout: 284, fee: 218, shopping: 1373, commute: 37
@@ -40,12 +42,21 @@ total: 4357
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2022-04-18 周一 23:00 ++1w> SCHEDULED: <2022-04-15 周五 18:00 ++1w>
+DEADLINE: <2022-04-25 周一 23:00 ++1w> SCHEDULED: <2022-04-22 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-04-09 周六 13:51]
+:LAST_REPEAT: [2022-04-16 周六 16:06]
 :END:
+- State "DONE"       from "TODO"       [2022-04-16 周六 16:06] \\
+  1. 处理pubuilocation点击跳转错误以及失效问题
+  2. 完善月会提出来的ui组件
+     - 点击吞噬
+     - 点击提示
+  3. 研究法术编辑器扩展
+     - 目前法术节点无法扩展到2D模式上, 编辑器组正在研究
+  ------------------------------------------------
+  1. 直接进行一个吉他的买, 必须练成功
 - State "DONE"       from "TODO"       [2022-04-09 周六 13:51] \\
   1. 处理容器自动添加子节点导致的bug
   2. checkbtn增加信号
@@ -55,6 +66,7 @@ DEADLINE: <2022-04-18 周一 23:00 ++1w> SCHEDULED: <2022-04-15 周五 18:00 ++1
   6. 实现点击吞噬组件
   ----------------------
   1. 陷入游戏慌了, 是时候趁着这个时候学习一波了.
+  2. 报了个吉他班, 开始学习
 - State "DONE"       from "TODO"       [2022-04-01 周五 17:10] \\
   1. UI编辑器生成控件类大部分替换为项目控件类
   2. 为所有带有点击操作的控件添加方便的设置回调接口
@@ -862,7 +874,7 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** TODO [#A] 减肥 [1/3]                                             :event:
+** TODO [#A] 减肥 [2/3]                                             :event:
 SCHEDULED: <2022-04-11 周一 17:27 +1w>
 :PROPERTIES:
 :LAST_REPEAT: [2022-04-11 周一 09:15]
@@ -881,7 +893,7 @@ SCHEDULED: <2022-04-11 周一 17:27 +1w>
   2.5->3.5->4.0, 76.1kg
 目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
 - [X] 跑步一次 5.0km
-- [ ] 跑步一次 5.0km
+- [X] 跑步一次 5.0km
 - [ ] 跑步一次 5.0km
 ** TODO [#A] 吉他学习                                               :event:
 SCHEDULED: <2022-04-17 周日 17:00 ++1w>
