--- a/src/org/ref/tech/重构.org
+++ b/src/org/ref/tech/重构.org
@@ -24,3 +24,39 @@ bug
 *** 重构提高编程速度
 注意, 良好的设计才是快速开发的根本, 重构能够改进, 维护良好设计, 自然可以提高编程
 速度
+** 何时重构
+不要专门抽时间重构, 重构应该随时随地进行
+*** 三次原则
+第一次做某事只管去做, 第二次尽管反感但还是可以做, 第三次再做类似的就应该重构
+*** 添加功能时重构
+重构除了可以理清思路, 也可以让添加新功能更加简单流畅
+*** 修补错误时重构
+代码没有清晰到一眼让你看出bug, 那么应该重构
+** 重构的精髓就是增加间接层
+计算机科学是这样一门科学, 它相信所偶有的问题都可以添加一个间接层来解决.
+尽管间接层是一柄双刃剑, 它会增加复杂度. 但是它有几个非常强大的价值:
+- 允许逻辑共享
+- 分开解释意图和实现
+- 隔离变化
+- 封装条件逻辑
+** 重构的难题
+重构虽然有很多好处, 但它不是银弹, 必然有其局限的地方, 在不断的尝试中才能发现它的
+问题.
+*** 数据库
+很多程序的逻辑和数据库非常紧密的结合到一起. 导致难以进行重构
+*** 修改公共接口
+对于大量被别人调用的接口, 一般来说你不能直接修改它, 而是应该加一个新的接口, 让
+旧的接口调用新的接口, 给别人时间切换到新的接口上来, 然后再废弃旧接口
+*** 何时不该重构
+- 现有代码不能运行, 那应该先确保其能够正常运行之后在重构
+- 项目临近最后期限, 这个时候重构的收益远远小于风险
+** 重构和设计
+重构使得预先的设计不必完美, 只要简单合适就可以开始了. 随着编程的继续, 你对问题的
+理解会加深. 通过不断重构来不断优化设计. 最终你会得到一个简单, 足够灵活的设计
+** 重构和性能
+除了对性能有严格要求的软件, 编写高性能软件的秘密就是: 首先写出可调的软件, 然后调
+整它来获得足够的速度.
+衡量性能一定不要通过臆测, 而是用于个度量工具来检测性能数据, 要知道浪费的80%的时间
+集中在20%的代码上, 你需要做的就是通过工具找到20%, 优化它.
+一个不断重构, 结构良好的程序很容易定位到性能热点, 从而帮助你更轻松的优化速度
+
