--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -40,7 +40,7 @@ CLOCK: [2022-03-07 周一 10:24]--[2022-03-07 周一 10:49] =>  0:25
   学到了一个很新颖的思路, n个队伍比赛在每个队伍失败一次就淘汰的情况下最多打几场,
   答案是n-1场, 因为最后只有一个队伍获胜
 - [X] 完成一道题
-** TODO [#A] 每周45个番茄钟 [3/5]                                    :work:
+** TODO [#A] 每周45个番茄钟 [4/5]                                    :work:
 DEADLINE: <2022-04-15 周五 09:00 +1w> SCHEDULED: <2022-04-11 周一 09:00 +1w>
 :PROPERTIES:
 :LAST_REPEAT: [2022-04-08 周五 15:48]
@@ -66,11 +66,15 @@ DEADLINE: <2022-04-15 周五 09:00 +1w> SCHEDULED: <2022-04-11 周一 09:00 +1w>
 - [X] 10
 - [X] 10
 - [X] 10
-- [ ] 12
+- [X] 8
 - [ ] 10
 ** TODO [#B] 每周学习《重构 改善既有代码的设计》1章                 :learn:
-SCHEDULED: <2022-04-11 周一 ++1w>
-- [ ] :: 学习第一章
+SCHEDULED: <2022-04-18 周一 ++1w>
+:PROPERTIES:
+:LAST_REPEAT: [2022-04-14 周四 20:36]
+:END:
+- State "DONE"       from "TODO"       [2022-04-14 周四 20:36]
+- [ ] :: 学习第三章
 ** TODO [#A] 每月一篇技术文档                                          :m8:
 DEADLINE: <2022-05-30 周一 ++1m> SCHEDULED: <2022-05-01 周日 09:27 ++1m>
 :PROPERTIES:
@@ -92,11 +96,12 @@ CLOCK: [2022-03-07 周一 16:50]--[2022-03-07 周一 17:15] =>  0:25
 :END:
 - [X] 第一篇
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2022-04-16 周六 18:00 ++1w> DEADLINE: <2022-04-18 周一 12:00 ++1w>
+SCHEDULED: <2022-04-23 周六 18:00 ++1w> DEADLINE: <2022-04-25 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2022-04-09 周六 13:55]
+:LAST_REPEAT: [2022-04-16 周六 16:21]
 :END:
+- State "DONE"       from "TODO"       [2022-04-16 周六 16:21]
 - State "DONE"       from "TODO"       [2022-04-09 周六 13:55]
 - State "DONE"       from "TODO"       [2022-04-01 周五 17:22]
 - State "DONE"       from "TODO"       [2022-03-26 周六 16:22]
@@ -154,8 +159,19 @@ SCHEDULED: <2022-04-16 周六 18:00 ++1w> DEADLINE: <2022-04-18 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** DONE [#A] UI编辑器优化                                              :m8:
+** WAIT [#B] 场景编辑器可行性研究                                      :m8:
+SCHEDULED: <2022-04-15 周五 09:19>
+:PROPERTIES:
+:BLOCKER:  olp("work.org" "Next Action/蓝图扩展")
+:END:
+** TODO [#A] 蓝图扩展                                                  :m8:
+SCHEDULED: <2022-04-14 周四 09:20>
+** Archive                                                        :ARCHIVE:
+*** DONE [#A] UI编辑器优化                                             :m8:
 CLOSED: [2022-04-11 周一 19:44] SCHEDULED: <2022-04-06 周三 12:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-04-16 周六 16:20
+:END:
 :LOGBOOK:
 CLOCK: [2022-04-11 周一 18:54]--[2022-04-11 周一 19:19] =>  0:25
 CLOCK: [2022-04-11 周一 17:19]--[2022-04-11 周一 17:44] =>  0:25
@@ -171,8 +187,11 @@ CLOCK: [2022-04-11 周一 13:43]--[2022-04-11 周一 14:08] =>  0:25
 - [X] 复用滚动框加到编辑器中
 - [X] 网格增加自动调整大小选项
 - [X] 吞噬点击控件, 点击提示控件
-** DONE [#A] 处理右键提示失效                                          :m8:
+*** DONE [#A] 处理右键提示失效                                         :m8:
 CLOSED: [2022-04-11 周一 10:31] SCHEDULED: <2022-04-11 周一 09:30>
+:PROPERTIES:
+:ARCHIVE_TIME: 2022-04-16 周六 16:20
+:END:
 * Appointment
 * Project
 * Someday
